@startuml
class Figure {
-id
-name
-description
-update_date
-created_at
-slug
}

class Figure_image{
-id
-fileName
}

class Figure_video{
-id
-fileName
}

class User {
-id
-name
-email
-password
-roles
-activationToken
-resetToken
}

class Comment{
-id
-content
-date
}

class Category{
-id
-title
-description
}



Comment "0..*"--"1" User
Comment "0..*"--"1" Figure
Category "1"--"*" Figure
Figure "1"--"0..*" Figure_image
Figure "1"--"0..*" Figure_video
@enduml